# danielhoherd

./: .gitignore  .pre-commit-config.yaml  CNAME  Daniel Hoherd dot com.lektorproject  Makefile  Pipfile  README.md  _config.yml  flickr-deletion-photos.html  index.html  pyproject.toml
_posts/: 2014-10-01-testing.md  2014-10-01-welcome-to-jekyll.markdown  2015-06-24-2015-06-24-test-from-editorial.markdown  2015-06-24-Untitled.md  2015-06-25-2015-06-25-repo_public.markdown  2017-03-22-links-and-stuff.md
content/: contents.lr
templates/: layout.html
