[tool.poetry]
name = "danielhoherd.github.io"
version = "0.1.0"
description = "Personal website of Daniel Hoherd."
authors = ["Daniel Hoherd <daniel.hoherd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
lektor = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
